--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -31,6 +31,17 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
+    - name: Debug Info
+      run: |
+        echo "Docker version:"
+        docker --version
+        echo "Docker Compose version:"
+        docker-compose --version
+        echo "Node version:"
+        node --version
+        echo "NPM version:"
+        npm --version
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
